--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,16 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "extWatcher",
   "short_name": "extWatcher",
   "description": "Watch a Chromium-based browser for extension install and removal events.",
-  "version": "1.0.0.1",
+  "version": "1.0.1.0",
   "author": "Eric Lawrence (@ericlaw)",
 
   "icons": {
     "16": "images/icon16.png"
   },
 
-  "browser_action": {
+  "action": {
      "default_icon": {
         "16": "images/icon16.png"
       },
@@ -18,12 +18,10 @@
   },
 
   "background": {
-    "scripts": ["background.js"],
-    "persistent": true
+    "service_worker": "background.js"
   },
 
   "permissions": [
-    "tabs",
     "management",
     "storage"
   ]
